Dockerize and deploy app